--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.project.e_card">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +23,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service
+            android:name=".NFC.MyHCEService"
+            android:permission="android.permission.BIND_NFC_SERVICE">
+            <intent-filter>
+                <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <meta-data android:name="android.nfc.cardemulation.host_apdu_service"
+                android:resource="@xml/my_host_metadata"/>
+
+        </service>
     </application>
+
+<!--    <uses-sdk android:minSdkVersion="10"/>-->
+    <uses-feature android:name="android.hardware.NFC" android:required="true" />
+    <uses-feature android:name="android.hardware.nfc.hce" android:required="true"/>
+
+    
+
+
+
+
 
 </manifest>
