--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,12 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.0'
     testImplementation 'junit:junit:4.13'
     implementation 'com.android.support:cardview-v7:29.1.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -44,6 +44,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
     // Fix for error: "com.android.tools.r8.a: Invoke-customs are only supported starting with Android O (--min-api 26)" that i found on Stackoverflow
     android {
         compileOptions {
