Tried to help with the NFC stuff, we now get an AID which only resets upon deleting the app and is device specific

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,35 +20,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"/>
-        <activity android:name=".LoginScreen">
 
+        <activity android:name=".LoginScreen">
         <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         
-        <service
-            android:name=".NFC.HostCardEmulatorService"
-            android:exported="true"
+        <service android:name=".NFC.HostCardEmulatorService" android:exported="true"
             android:permission="android.permission.BIND_NFC_SERVICE">
             <intent-filter>
-                <action
-                    android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE"/>
+                <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE"/>
             </intent-filter>
             <meta-data
                 android:name="android.nfc.cardemulation.host_apdu_service"
                 android:resource="@xml/apduservice"/>
         </service>
     </application>
-
-
-
-    
-
-
-
-
-
 </manifest>
